# amnezia-web-ui

./: .dockerignore  .env.example  .flake8  .gitignore  Dockerfile  QA_REVIEW.md  README.md  TASKS_OVERVIEW.md  VERIFICATION_PLAN.md  VERIFICATION_REPORT_2026-04-24.md  WORKLOG.md  app.py  awg_manager.py  config.py  credential_crypto.py  database.py  dependencies.py  dns_manager.py  docker-compose.yml  docker_utils.py  integrity.py  migrate_to_sqlite.py  pyproject.toml  requirements-dev.txt  requirements.txt  schema.sql  schemas.py  ssh_manager.py  telegram_bot.py  telemt_manager.py  utils.py  xray_manager.py
app/: __init__.py  main.py
docs/: deployment.md
leaderboard/: DEV_HANDOVER.md  QA_REVIEW.md  SPEC.md  TASK-01.md  TASK-02.md  TASK-03.md  TASK-04.md  TASK-05.md  WORKLOG.md
protocol_telemt/: Dockerfile.sha256  config.toml  config.toml.sha256  docker-compose.yml.sha256
tasks/: TASKS_OVERVIEW.md
telemt_task_1/: DEV_HANDOVER.md  QA_REVIEW.md  TASK.md  WORKLOG.md
telemt_task_2/: DEV_HANDOVER.md  QA_REVIEW.md  TASK.md  WORKLOG.md
telemt_task_3/: DEV_HANDOVER.md  QA_REVIEW.md  TASK.md  WORKLOG.md
telemt_task_4/: DEV_HANDOVER.md  ISSUE.md  LOCAL_ISSUE.md  QA_REVIEW.md  SPEC.md  WORKLOG.md
telemt_task_5/: CICD_ERRORS.md  DEV_HANDOVER.md  LOCAL_ISSUE.md  QA_REVIEW.md  TASK.md  WORKLOG.md
templates/: base.html  change_password.html  index.html  leaderboard.html  login.html  my_connections.html  server.html  settings.html  setup.html  user_share.html  users.html
tests/: conftest.py  test_api_add_server_race_condition.py  test_api_clear_server.py  (+52 more)
(+50 files in other folders)
